fixed spam when mismatching lastModified in pages